--- a/HomeKitBrowser/Base.lproj/Main.storyboard
+++ b/HomeKitBrowser/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Rooms-->
@@ -133,7 +134,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="fsm-QS-Q3X">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="roomCell" id="fsm-QS-Q3X">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fsm-QS-Q3X" id="AGk-sj-DW6">
                                     <autoresizingMask key="autoresizingMask"/>
@@ -145,10 +146,70 @@
                             <outlet property="delegate" destination="wl1-Oq-REL" id="maS-7a-C5c"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="kg7-5B-BgW" kind="presentation" identifier="addRoom" id="AGX-bn-EY7"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuX-BV-JZ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1443" y="1843"/>
+        </scene>
+        <!--Add Room View Controller-->
+        <scene sceneID="3Pt-lR-Hod">
+            <objects>
+                <viewController id="kg7-5B-BgW" customClass="HKBAddRoomViewController" customModule="HomeKitBrowser" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="idS-4J-XX6"/>
+                        <viewControllerLayoutGuide type="bottom" id="ipm-X1-yaw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="8Db-eX-DUT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Vy-HR-s3A">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Add Room" id="NAr-No-KDy">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="2AY-6d-EcS">
+                                            <connections>
+                                                <action selector="cancelPressed:" destination="kg7-5B-BgW" id="XOn-Nx-Blv"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" enabled="NO" title="Done" id="8PZ-Sd-k4M">
+                                            <connections>
+                                                <action selector="donePressed:" destination="kg7-5B-BgW" id="zTE-nV-7X1"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Room Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QSx-pf-ulU">
+                                <rect key="frame" x="16" y="92" width="568" height="30"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="kg7-5B-BgW" id="kkR-FB-PIa"/>
+                                </connections>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="QSx-pf-ulU" firstAttribute="trailing" secondItem="8Db-eX-DUT" secondAttribute="trailingMargin" id="1sk-dR-tgT"/>
+                            <constraint firstAttribute="trailing" secondItem="7Vy-HR-s3A" secondAttribute="trailing" id="ErP-Iq-MkP"/>
+                            <constraint firstItem="QSx-pf-ulU" firstAttribute="top" secondItem="idS-4J-XX6" secondAttribute="bottom" constant="72" id="OV8-ay-mGq"/>
+                            <constraint firstItem="7Vy-HR-s3A" firstAttribute="leading" secondItem="8Db-eX-DUT" secondAttribute="leading" id="TZ1-rg-8nQ"/>
+                            <constraint firstItem="QSx-pf-ulU" firstAttribute="leading" secondItem="8Db-eX-DUT" secondAttribute="leadingMargin" id="jRw-Hk-67y"/>
+                            <constraint firstItem="7Vy-HR-s3A" firstAttribute="top" secondItem="idS-4J-XX6" secondAttribute="bottom" id="uc4-tI-bMU"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="doneButton" destination="8PZ-Sd-k4M" id="1zJ-Z6-nui"/>
+                        <outlet property="roomNameField" destination="QSx-pf-ulU" id="ib9-Es-FNM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6hw-vP-Acv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2276" y="1843"/>
         </scene>
         <!--Home Config Table View Controller-->
         <scene sceneID="B6u-TO-MAP">
